[gd_scene load_steps=59 format=3 uid="uid://07qm4w0xtu5s"]

[ext_resource type="Script" uid="uid://culmapmwppxfn" path="res://entities/characters/player/player.gd" id="1_oul6g"]
[ext_resource type="PackedScene" uid="uid://o0p2t50um1mt" path="res://entities/characters/character.tscn" id="1_sybl7"]
[ext_resource type="Script" uid="uid://21sqffgxja1t" path="res://gamelogic/entity_stats.gd" id="3_0s3gd"]
[ext_resource type="Texture2D" uid="uid://hknh14rc5r2n" path="res://entities/characters/player/spritesheets/player_dash.png" id="3_8t03j"]
[ext_resource type="Texture2D" uid="uid://cq5us0y5wfys" path="res://entities/characters/player/spritesheets/player_die.png" id="4_2ieo8"]
[ext_resource type="Texture2D" uid="uid://b2mvsclwckln1" path="res://entities/characters/player/spritesheets/player_down_attack.png" id="5_ebec5"]
[ext_resource type="Texture2D" uid="uid://bvn03gurpmetn" path="res://entities/characters/player/spritesheets/player_jump_and_fall.png" id="6_yllr7"]
[ext_resource type="Texture2D" uid="uid://fcjhfwjsb662" path="res://entities/characters/player/spritesheets/player_hurt.png" id="7_kb6p2"]
[ext_resource type="Texture2D" uid="uid://clx0dwqll3bx5" path="res://entities/characters/player/spritesheets/player_normal_attack.png" id="8_wodsf"]
[ext_resource type="Texture2D" uid="uid://bd31g8vkerdgt" path="res://entities/characters/player/spritesheets/player_run.png" id="9_32hag"]
[ext_resource type="Texture2D" uid="uid://gj13iu7tvq84" path="res://entities/characters/player/spritesheets/player_up_attack.png" id="10_tqiix"]
[ext_resource type="Texture2D" uid="uid://durfs00c4rgjs" path="res://entities/characters/player/spritesheets/dash_trail.png" id="12_afbhy"]
[ext_resource type="PackedScene" uid="uid://xwq6e8wjfs7n" path="res://ui/in_game_ui/in_game_ui.tscn" id="13_2jd2e"]
[ext_resource type="Script" uid="uid://2nif3gf1owb4" path="res://entities/characters/player/sfx.gd" id="15_np65q"]
[ext_resource type="AudioStream" uid="uid://boxrmqsn0rklr" path="res://sound/sound_effects/player/player_jump.wav" id="16_afbhy"]
[ext_resource type="AudioStream" uid="uid://o6lu1figfivg" path="res://sound/sound_effects/player/player_dash.wav" id="17_m8clj"]
[ext_resource type="AudioStream" uid="uid://dy5myf0u3dnrj" path="res://sound/sound_effects/player/player_attack.wav" id="18_lhopy"]
[ext_resource type="FontFile" uid="uid://dpvfa5xanrt1y" path="res://fonts/Minecraftia-Regular.ttf" id="18_ou7en"]
[ext_resource type="AudioStream" uid="uid://cjgqtxk34qa6f" path="res://sound/sound_effects/player/player_hurt.wav" id="19_nopo2"]
[ext_resource type="AudioStream" uid="uid://c03b77jcropv" path="res://sound/sound_effects/enemy/enemy_die.wav" id="20_afbhy"]

[sub_resource type="Resource" id="Resource_2jd2e"]
script = ExtResource("3_0s3gd")
metadata/_custom_type_script = "uid://21sqffgxja1t"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5otfs"]
size = Vector2(128, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("3_8t03j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("3_8t03j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("3_8t03j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("3_8t03j")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("3_8t03j")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("4_2ieo8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4c7l"]
atlas = ExtResource("4_2ieo8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knn7v"]
atlas = ExtResource("4_2ieo8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqkx"]
atlas = ExtResource("4_2ieo8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw77l"]
atlas = ExtResource("4_2ieo8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rptt4"]
atlas = ExtResource("5_ebec5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pn3"]
atlas = ExtResource("5_ebec5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8hi5"]
atlas = ExtResource("5_ebec5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uvqg"]
atlas = ExtResource("5_ebec5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1yo"]
atlas = ExtResource("5_ebec5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ejfk"]
atlas = ExtResource("6_yllr7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd2rm"]
atlas = ExtResource("7_kb6p2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1so5t"]
atlas = ExtResource("6_yllr7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55jnj"]
atlas = ExtResource("6_yllr7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx5ib"]
atlas = ExtResource("8_wodsf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xo5"]
atlas = ExtResource("8_wodsf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_art4l"]
atlas = ExtResource("8_wodsf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjxoa"]
atlas = ExtResource("9_32hag")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gswnw"]
atlas = ExtResource("9_32hag")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcnuv"]
atlas = ExtResource("9_32hag")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j55il"]
atlas = ExtResource("9_32hag")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjies"]
atlas = ExtResource("10_tqiix")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmwog"]
atlas = ExtResource("10_tqiix")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pxes"]
atlas = ExtResource("10_tqiix")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmu53"]
atlas = ExtResource("10_tqiix")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7j2h"]
atlas = ExtResource("10_tqiix")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n0b8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpn")
}],
"loop": false,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7qer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4c7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knn7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw77l")
}],
"loop": true,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rptt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8hi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uvqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1yo")
}],
"loop": true,
"name": &"down_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ejfk")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd2rm")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1so5t")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55jnj")
}],
"loop": true,
"name": &"land_on_ground",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx5ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2xo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_art4l")
}],
"loop": false,
"name": &"normal_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjxoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gswnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcnuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j55il")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjies")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmwog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pxes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmu53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7j2h")
}],
"loop": true,
"name": &"up_attack",
"speed": 10.0
}]

[sub_resource type="Curve" id="Curve_0s3gd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5833333, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_g1dw6"]
curve = SubResource("Curve_0s3gd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2jd2e"]
particle_flag_disable_z = true
radial_velocity_min = 499.99997
radial_velocity_max = 499.99997
gravity = Vector3(0, 98, 0)
scale_min = 0.0
scale_max = 0.39999998
alpha_curve = SubResource("CurveTexture_g1dw6")

[sub_resource type="LabelSettings" id="LabelSettings_np65q"]
font = ExtResource("18_ou7en")
font_size = 32

[node name="Player" groups=["player"] instance=ExtResource("1_sybl7")]
script = ExtResource("1_oul6g")
coyote_time = 0.1
speed = 100.0
ground_friction = 10.0
air_resistance = 7.0
jump_velocity = 30.0
gravity_multiplier = 10.0
max_variable_jump_frames = 10
dash_strength = 35.0
dash_cooldown = 0.5
dash_duration_frames = 10
wall_climb_strength = 0.75
has_double_jump = true
has_dash = true
input_buffer_frames = 15
lifeforce_regen = 3.0
lifeforce_seconds = 20.0
stats = SubResource("Resource_2jd2e")
team = 1

[node name="WorldCollider" parent="." index="0"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_5otfs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_5otfs")

[node name="CharacterSprite" parent="." index="2"]
texture_filter = 1
position = Vector2(13, 37)
scale = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_n0b8q")
animation = &"hurt"
autoplay = "run"

[node name="DashTrail" type="GPUParticles2D" parent="." index="3"]
emitting = false
amount = 100
texture = ExtResource("12_afbhy")
lifetime = 0.5
explosiveness = 0.15
process_material = SubResource("ParticleProcessMaterial_2jd2e")

[node name="Camera2D" type="Camera2D" parent="." index="4"]
zoom = Vector2(0.5, 0.5)
process_callback = 0
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="CoyoteTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="DashTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="PlayerUI" type="CanvasLayer" parent="." index="7"]

[node name="InGameUI" parent="PlayerUI" index="0" instance=ExtResource("13_2jd2e")]

[node name="Label" type="Label" parent="." index="8"]
visible = false
offset_left = -40.0
offset_top = -144.0
offset_right = 40.0
offset_bottom = -88.0
text = "test"
label_settings = SubResource("LabelSettings_np65q")

[node name="sfx" type="Node2D" parent="." index="9"]
script = ExtResource("15_np65q")

[node name="jump_sfx" type="AudioStreamPlayer" parent="sfx" index="0"]
stream = ExtResource("16_afbhy")

[node name="dash_sfx" type="AudioStreamPlayer" parent="sfx" index="1"]
stream = ExtResource("17_m8clj")
pitch_scale = 0.83

[node name="attack_sfx" type="AudioStreamPlayer" parent="sfx" index="2"]
stream = ExtResource("18_lhopy")

[node name="hurt_sfx" type="AudioStreamPlayer" parent="sfx" index="3"]
stream = ExtResource("19_nopo2")
volume_db = 5.81

[node name="enemy_die" type="AudioStreamPlayer" parent="sfx" index="4"]
stream = ExtResource("20_afbhy")

[connection signal="animation_finished" from="CharacterSprite" to="." method="_on_character_sprite_animation_finished"]
[connection signal="animation_looped" from="CharacterSprite" to="." method="_on_character_sprite_animation_looped"]
[connection signal="frame_changed" from="CharacterSprite" to="." method="_on_character_sprite_frame_changed"]
